Crash in WebCore::MediaSourcePrivateAVFObjC::hasAudio const + 13 https://bugs.webkit.org/show_bug.cgi?id=126768

Reviewed by Eric Carlson.

Null-check m_mediaSourcePrivate before calling.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::hasVideo):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::hasAudio):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::seekInternal):

Canonical link: https://commits.webkit.org/144971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161987 268f45cc-cd09-0410-ab3c-d52691b4dbfc